# CandidAI-version-1

./: README.md  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  dependencies.py
backend/app/models/: schemas.py
backend/app/services/: nlp.py  parser.py  summarizer.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js
frontend/src/components/: CandidateCard.jsx  Dashboard.jsx  Results.jsx  Sidebar.jsx  Stats.jsx  UploadForm.jsx  UploadPanel.jsx
